fixed navbar spacing on small screen

--- a/testdata/template/public/css/css.css
+++ b/testdata/template/public/css/css.css
@@ -48,7 +48,7 @@ header nav{
 	/* width:100%; */
 	flex-wrap: wrap;
 	display:inline-flex;
-	justify-content: space-around;
+	justify-content: center;
 	align-items: center;
 
 }
